@@ -1,3 +1,6 @@
+2016-05-29 0.8.2 alpha
+Added an option to change font size used by the visualization.
+
 2016-05-28 0.8.2 alpha
 Allow disabling soundfonts in the soundfont setting tab.
 
